--- a/package.json
+++ b/package.json
@@ -30,7 +30,6 @@
     "jest": "^29.2.2",
     "release-it": "^15.5.0",
     "yeoman-assert": "^3.1.1",
-    "yeoman-test": "^6.3.0",
-    "yosay": "^2.0.2"
+    "yeoman-test": "^6.3.0"
   }
 }
