--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "scripts": {
     "test": "jest --testPathIgnorePatterns /generators/",
-    "release": "release-it",
+    "release": "release-it --only-version",
     "commit": "git-cz"
   },
   "files": [
@@ -26,6 +26,7 @@
     "yeoman-generator": "^5.7.0"
   },
   "devDependencies": {
+    "@release-it/conventional-changelog": "^5.1.1",
     "git-cz": "^4.9.0",
     "jest": "^29.2.2",
     "release-it": "^15.5.0",
