--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "jest": "^29.2.2",
     "release-it": "^15.5.0",
     "yeoman-assert": "^3.1.1",
+    "yeoman-environment": "^3.12.1",
     "yeoman-test": "^6.3.0"
   }
 }
