--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "scripts": {
     "test": "jest --testPathIgnorePatterns /generators/",
-    "release": "release-it --only-version",
+    "release": "release-it",
     "commit": "git-cz"
   },
   "files": [
